[B]2.0.5[/B]
Added Auto-Resume of watched Videos
[B]2.0.3[/B]
More Clean Up
[B]2.0.1[/B]
Merge Frodo and Gotham Repos
Create Code to Push to XBMC Repo
[B]1.0/2.0[/B]
Clean up and final build for submission
[B]0.9 x12[/B]
Fixed EPs beyond 20 not showing
Removed POP link, since nothing in there played.
[B]0.9 x10[/B]
More Fixes
More Data
Changes to help non-US users login
Added anonymous user tracking
[B]Version 0.9 x2[/B]
More Fixes
Added Bigger Art for larger screens
[B]Version 0.9 x1[/B]
Lot's of Bug Fixes (le__)
[B]Version 0.9[/B]
Crunchyroll;xbmc beta1
Name change to reflect the major code changes
Based on the Crunchyroll plugin for Plex by mattrk
https://forums.plex.tv/index.php/topic/73626-rel-crunchyroll-plugin/
[B]Version 0.7.2.2[/B]
Added corrections for non-US / non-English sights.
[B]Version 0.7.2[/B]
Added ability to disable subtitles
Resolved long standing metadata bug
[B]Version 0.7.1[/B]
Added Workaround broken videos
[B]Version 0.7[/B]
RMTP is Back!
[B]Version 0.6.9.2[/B]
Added Portuguese (Brazil)
Removed Broken Seasons Link
[B]Version 0.6.9.0[/B]
BETA OF REBUILD
Disabled rtms streams, because they are broken again
[B]Version 0.6.5.2[/B]
Marked Plugin as BROKEN
[B]Version 0.6.5.1[/B]
Changed Subtitles Crypto for changes in XBMC Python in 12.2
Added Subtitle Language Selecton (Le__)
[B]Version 0.6.5[/B]
-Re-added alternative streaming method for playback on devices lacking rtmp playback
-Must be enabled in settings, disabled by default, SD playback only
[B]Version 0.6.0.5[/B]
-Resolve the plugin not showing on new Frodo installs.
-Force Refresh to show plugins
[B]Version 0.6.0.3[/B]
-Correct Playback issues for users of non-US Crunchyroll site. (le__)
-Corrected a subtitle decoding bug (mattrk)
-Props to le__ and  mattrk for their patches
[B]Version 0.6.0.2[/B]
-Roleback 0.6.0.1 due to broken Subtitle issue
[B]Version 0.6[/B]
-The OMG I Br0ked the Fix Fix
-Videos playback as before
-Thanks to Zehd for his help.
[B]Version 0.5[/B]